// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`readArgs should report named args errors 1`] = `
Object {
  "args": Object {
    "_": Array [
      "whook",
    ],
    "parameters": "{}",
  },
  "errorCode": "E_BAD_ARGS",
  "errorParams": Array [
    Array [
      Object {
        "dataPath": "",
        "keyword": "required",
        "message": "should have required property 'name'",
        "params": Object {
          "missingProperty": "name",
        },
        "schemaPath": "#/required",
      },
    ],
  ],
}
`;

exports[`readArgs should work with listed args 1`] = `
Object {
  "args": Object {
    "_": Array [
      "whook",
      "hey",
    ],
  },
}
`;

exports[`readArgs should work with named args 1`] = `
Object {
  "args": Object {
    "_": Array [
      "whook",
    ],
    "name": "getPing",
    "parameters": "{}",
  },
}
`;

exports[`readArgs should work with no args 1`] = `
Object {
  "args": Object {
    "_": Array [
      "whook",
    ],
  },
}
`;
